# fledge_lab

./: .gitignore  .pre-commit-config.yaml  Dockerfile-basenode  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
advertiser/: server.js
advertiser/public/: arapi-event.ejs  arapi-event.html  arapi-shoe-store.ejs  dynamic.html  index.ejs  index.html  no-interest-groups.html  shoe-a.ejs  shoe-a.html  shoe-b.ejs  shoe-b.html  shoe-c.html  show-arapi-ad.ejs
cert_creator/: Dockerfile  generate_certificates.sh
client/: Dockerfile  entrypoint.sh  experiments.sh  tests.sh  vnc_server.sh
client/scripts/: arapi_click.py  arapi_conversion.py  arapi_events.py  auction.py  debug_wasm.py  dynamic_auction_multi_dsp.py  find_interest_group_size.py  test_interest_group_amount.py  test_interest_group_bidding_order.py  utils.py
dsp/: Dockerfile  run.sh  server.js  wasm2string.js
dsp/bidding-logic-wasm/: Cargo.toml
dsp/bidding-logic-wasm/src/: lib.rs
dsp/public/: arapi-ad-interest-group.html  bidding_logic.js  bidding_logic_wasm.js  bidding_signal.json  dynamic-interest-group.ejs  dynamic-interest-group.html  general-interest-group.ejs  general-interest-group.html  infinite_loop.js  reporting.ejs  reporting.html  wasm.ejs  wasm.html
publisher/: server.js
publisher/public/: index.html
selenium/: Dockerfile  launch_browser.sh  run.sh
selenium/scripts/: arapi_click.py  arapi_conversion.py  auction.py  debug_wasm.py  denial_of_service.py  dynamic_auction.py  dynamic_auction_multi_dsp.py  dynamic_wasm_auction.py  utils.py  (+4 more)
ssp/: server.js
(+12 files in other folders)
