[package]
name = "bidding-logic-wasm"
version = "0.1.0"
authors = ["Marco Lugo <marco.lugo@nextroll.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
